# recsys_arena

./: .gitignore  README.md  pyproject.toml
configs/: pairwise.yaml
recsys_arena/: main.py  run_eval.py
recsys_arena/evaluator/: evaluator.py  metrics.py
recsys_arena/prompt_engine/: loader.py  parser.py  prompt_spec.py
recsys_arena/utils/: logging.py
sample_data/: tasks.csv
templates/: pairwise.j2
