[project]
name = "recsys-arena"
version = "0.1.0"
description = "MVP evaluator for recommender systems using LLMs"
requires-python = ">=3.10"

dependencies = [
    "litellm",
    "python-dotenv",
    "pandas"
]

[project.optional-dependencies]
lint = [
    "ruff"
]
dev = [
    "pytest"
]

[tool.setuptools]
packages = ["recsys_arena"]

[tool.uv]

[lint]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "T"]  # E: style, F: bugs, I: imports, T: type checks
